--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Software Libre - Coop Alpa Corral</title>
+		<title>Software Libre - conceptos básicos</title>
 
 		<link rel="stylesheet" href="reveal.js-master/dist/reveal.css">
 		<link rel="stylesheet" href="reveal.js-master/dist/theme/dracula.css" id="theme">
